begin using simpleWeather

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/jquery.simpleWeather.min.js"></script>
+	<script src="js/main.js"></script>
 </head>
 <body>
+	<div id="weather">hi</div>
 </body>
 </html>
