--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.simpleWeather.min.js"></script>
 	<script src="js/main.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUS4qPMFxFAMf-pi3yIv6BrHoDSfeLDwk&libraries=places"></script>
 </head>
 <body>
 	<div id="weather"></div>
+	<div id="map"></div>
 </body>
 </html>
