--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUS4qPMFxFAMf-pi3yIv6BrHoDSfeLDwk&libraries=places"></script>
 </head>
 <body>
+	<div id="temp"></div>
+	<div id="thumb"></div>
+	<div id="loc"></div>
 	<div id="weather"></div>
-	<div id="map"></div>
+	<button id="switch">switch</button>
 </body>
 </html>
