--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/jquery.simpleWeather.min.js"></script>
 	<script src="js/main.js"></script>
@@ -9,13 +10,13 @@
 </head>
 <body>
 	<div id="top-row" class="row">
-		<div id="thumb"></div>
-		<div id="temp"></div>
+		<div id="thumb" class="item"></div>
+		<div id="temp" class="item"></div>
 	</div>
 	<div id="bottom-row" class="row">
-		<div id="loc"></div>
-		<div id="weather"></div>
-		<div id="wind"></div>
+		<div id="loc" class="item bottom"></div>
+		<div id="weather" class="item bottom"></div>
+		<div id="wind" class="item bottom"></div>
 	</div>
 	<button id="switch">switch</button>
 </body>
