--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 		<div id="thumb" class="item"></div>
 		<div id="temp" class="item"></div>
 	</div>
+	<div class="row">
+		<a href="#" id="switch">switch units</a>
+	</div>
 	<div id="bottom-row" class="row">
 		<div id="loc" class="item bottom"></div>
 		<div id="weather" class="item bottom"></div>
 		<div id="wind" class="item bottom"></div>
 	</div>
-	<button id="switch">switch</button>
+	
 </body>
 </html>
