--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div id="thumb" class="item"></div>
 		<div id="temp" class="item"></div>
 	</div>
-	<div class="row">
+	<div id="switch-row" class="row">
 		<a href="#" id="switch">switch units</a>
 	</div>
 	<div id="bottom-row" class="row">
