--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUS4qPMFxFAMf-pi3yIv6BrHoDSfeLDwk&libraries=places"></script>
 </head>
 <body>
+	<img id="loading" src="images/loading.gif">
 </body>
 </html>
